Fix 1.20 syntax